tests/sksl/errors/Discard.rte
half4 main() {
    discard;
}
